# NPLib

./: 18F3HeD19Ne280.reaction  18F3HeD19Ne360.reaction  CMakeLists.txt  SharcDev.cc  SharcDev.hh
NPLibDetectors/QQQ/: Makefile  TQQQDataDict.cxx  TQQQPhysics.rootmap  TQQQPhysicsDict_rdict.pcm  cmake_install.cmake
NPLibDetectors/Sharc/: Makefile  TSharcDataDict.cxx  TSharcDataDict_rdict.pcm  TSharcPhysics.rootmap  TSharcPhysicsDict.cxx  TSharcPhysicsDict_rdict.pcm  cmake_install.cmake
NPLibDetectors/basicScintillator/: TbasicScintillatorPhysics.cxx  TbasicScintillatorPhysics.h  TbasicScintillatorPhysicsDict.cxx  TbasicScintillatorPhysicsDict_rdict.pcm  TbasicScintillatorSpectra.h  cmake_install.cmake
NPSimulationDetectors/QQQ/: Makefile  cmake_install.cmake
NPSimulationDetectors/Sharc/: Makefile  cmake_install.cmake
NPSimulationDetectors/basicScintillator/: CMakeLists.txt  Makefile  basicScintillator.cc  basicScintillator.hh  cmake_install.cmake
QQQ/: TQQQData.rootmap  TQQQDataDict_rdict.pcm  TQQQPhysicsDict.cxx
Sharc/: TSharcData.rootmap
SharcDev/: SharcDev.cc  SharcDev.hh  TSharcDevData.cxx  TSharcDevData.h  TSharcDevData.rootmap  TSharcDevDataDict.cxx  TSharcDevDataDict_rdict.pcm  TSharcDevPhysics.cxx  TSharcDevPhysics.h  TSharcDevPhysicsDict.cxx  TSharcDevPhysicsDict_rdict.pcm  TSharcDevSpectra.cxx  TSharcDevSpectra.h
SharcDev/SharcDev/: CMakeLists.txt  TSharcDevData.cxx  TSharcDevPhysics.rootmap  TSharcDevPhysicsDict.cxx  TSharcDevSpectra.cxx  TSharcDevSpectra.h
basicScintillator/: CMakeLists.txt  Makefile  TbasicScintillatorData.cxx  TbasicScintillatorData.h  TbasicScintillatorData.rootmap  TbasicScintillatorDataDict.cxx  TbasicScintillatorDataDict_rdict.pcm  TbasicScintillatorPhysics.rootmap  TbasicScintillatorSpectra.cxx
(+19 files in other folders)
